--- a/Demo/packages.config
+++ b/Demo/packages.config
@@ -5,4 +5,5 @@
   <package id="knockoutjs" version="2.2.1" targetFramework="net45" />
   <package id="Sammy.js" version="0.7.4" targetFramework="net45" />
   <package id="sammyjs.TypeScript.DefinitelyTyped" version="0.0.2" targetFramework="net45" />
+  <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net45" />
 </packages>
